<resources>
    <string name="app_name">بنك الدم</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="remeberme">تذكرني</string>
    <string name="forgetPass">هل نسيت كلمة المرور</string>
    <string name="Login">دخول</string>
    <string name="creat_new_account">إنشاء حساب جديد</string>
    <string name="NoInternet">لا يوجد اتصال بالشبكة</string>
    <string name="EnterEmail">الرجاء ادخال الايميل</string>
    <string name="Name">الاسم</string>
    <string name="Email">الايميل</string>
    <string name="BithDay">تاريخ الميلاد</string>
    <string name="BloodType">فصيلةالدم</string>
    <string name="LastDate">أخر تاريخ تبرع</string>
    <string name="PhoneNo">الجوال</string>
    <string name="Pass">كلمة المرور</string>
    <string name="ConfirmPass">تأكيد كلمة المرور</string>
    <string name="Register">تسجيل</string>
    <string name="NoName">الرجاء ادخال الاسم</string>
    <string name="NoEmail">الرجاء ادخال الايميل</string>
    <string name="NoBirthDay">الرجاء ادخال تاريخ الميلاد</string>
    <string name="NoBloodType">الرجاء ادخال فصيلة الدم</string>
    <string name="Confirm">الرجاء ادخال نفس قيمة كلمة السر</string>
    <string name="SelectCityId">اختر مدينة</string>
    <string name="Send">ارسال</string>
    <string name="NoPhoneNo">الرجاء ادخال رقم الجوال</string>
    <string name="ResetPass">كود تغيير كلمة المرور</string>
    <string name="PinCode">كود التحقق</string>
    <string name="NewPass">كلمة المرور الجديدة</string>
    <string name="ConfirmNewPass">تأكيد كلمة المرور الجديدة</string>
    <string name="SendNewPass">تغيير كلمة المرور</string>
    <string name="NoPinCode">الرجاء ادخال كود التحقق</string>
    <string name="NoPass">الرجاء ادخال كلمة السر الجديدة</string>
    <string name="NoConfirmPass">الرجاء تأكيد كلمة السر</string>
    <string name="articals">المقالات</string>
    <string name="donateReq">طلبات التبرع</string>
    <string name="NameReq">اسم الحالة :</string>
    <string name="Hosp">المستشفى :</string>
    <string name="City">المدينة :</string>
    <string name="Call">اتصال</string>
    <string name="Detial">تفاصيل</string>
    <string name="pationName">الاسم :</string>
    <string name="Age">العمر</string>
    <string name="NoNeeds">عدد الاكياس المطلوبة</string>
    <string name="HospAdress">عنوان المستشفى</string>
    <string name="selectAdress">اختيار الموقع</string>
    <string name="MyInfo">معلوماتي</string>
    <string name="NotifcationSetting">إعدادات الاشعارات</string>
    <string name="Fav">المفضلة</string>
    <string name="Home">الرئيسية</string>
    <string name="Instruction">تعليمات الاستخدام</string>
    <string name="Connect">تواصل معنا</string>
    <string name="AboutApp">عن التطبيق</string>
    <string name="RateApp">تقييم التطبيق على المتجر</string>
    <string name="SignOut">تسجيل الخروج</string>
    <string name="AboutAppcontent">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق. إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع. ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق. هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</string>
    <string name="Phone">الجوال : 0798989789</string>
    <string name="EmailCont">البريد الالكتروني : name @name.com</string>
    <string name="Title">عنوان الرسالة</string>
    <string name="TitleContent">نص الرسالة</string>
    <string name="NoTitle">الرجاء ادخال عنوان الرسالة</string>
    <string name="NoContent">الرجاء ادخال نص الرسالة</string>
    <string name="NoSelectedCity">لم تقم باختيار المدينة</string>
    <string name="NoSelectedRegion">لم تقم باختيار المحافظة</string>
    <string name="RemeberMe">com.mai.BankBlood.RemeberMe</string>
    <string name="update">تعديل</string>
    <string name="tabNameReq">طلبات التبرع</string>
    <string name="SetApiToken">com.mai.BankBlood.ApiToken</string>
    <string name="ApiToken">ApiToken</string>
    <string name="ConnectUs">تواصل معنا</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogTitle</string>
    <string name="cancel">cancel</string>
</resources>
