<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/my_dimens_sss"
    android:paddingStart="@dimen/my_dimens_sss"
    android:background="@drawable/splash"
    tools:context=".ui.activites.MainLoginActivity"
    >


    <ImageView
        android:id="@+id/ResetPass_img_Logo"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/my_dimens_112lxx"
        android:layout_marginTop="@dimen/my_dimens_48l"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/ResetPass_Txt_ResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/ResetPass" />

    <EditText
        android:id="@+id/ResetPass_ET_PinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="252dp"
        android:hint="@string/PinCode" />

    <EditText
        android:id="@+id/ResetPass_ET_NewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="318dp"
        android:hint="@string/NewPass" />
    <EditText
        android:id="@+id/ResetPass_ET_ConfirmNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="385dp"
        android:hint="@string/ConfirmNewPass" />
    <Button
        android:id="@+id/ResetPass_B_Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="66dp"
        android:background="@color/colorAccent"
        android:text="@string/SendNewPass" />


</RelativeLayout>