<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/my_dimens_sss"
    android:paddingStart="@dimen/my_dimens_sss"
    android:orientation="vertical"
    android:background="@drawable/splash"
    tools:context=".ui.activites.MainLoginActivity"
    >


    <ImageView
        android:id="@+id/ForgetPass_img_Logo"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/my_dimens_48l"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/ForgetPass_Txt_ForgetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/forgetPass" />

    <EditText
        android:id="@+id/ForgetPass_ET_PhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittect_border"
        android:layout_marginTop="20dp"
        android:hint="@string/PhoneNo" />


    <Button
        android:id="@+id/ForgetPass_B_Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:text="@string/Send"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>