<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/my_dimens_sss"
    android:paddingStart="@dimen/my_dimens_sss"
    android:background="@drawable/splash"
    tools:context=".ui.activites.MainLoginActivity"
    >


    <ImageView
        android:id="@+id/Login_img_Logo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Login_ET_PhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_img_Logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittect_border"
            android:hint="@string/PhoneNo"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/Login_ET_Passworde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Login_ET_PhoneNo"
            android:layout_alignEnd="@+id/Login_ET_PhoneNo"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittect_border"
            android:hint="@string/Pass"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Login_ChBox_RemberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginStart="10dp"
            android:text="@string/remeberme" />

        <TextView
            android:id="@+id/Login_TextView_ForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:text="@string/forgetPass" />
    </RelativeLayout>

    <Button
        android:id="@+id/Login_B_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:text="@string/Login" />

    <Button
        android:id="@+id/Login_B_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorRegB"
        android:text="@string/creat_new_account" />

</LinearLayout>